# drf-idem

./: .gitignore  GUIDELINES.md  MANIFEST.in  README.md  README_RU.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
drf_idem/: __init__.py  admin.py  apps.py  cache.py  middleware.py  settings.py  urls.py  views.py
drf_idem/templates/drf_idem/: admin_stats.html
tests/: conftest.py  settings.py  test_admin.py  test_cache.py  test_middleware.py  test_settings.py  urls.py
